Attempt to checkpoint before things have stopped...